--- a/package.json.sample
+++ b/package.json.sample
@@ -1,17 +1,16 @@
 {
-  "name": "secure-rest-api",
+  "name": "minimal-sample",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Mickaël Andrieu <mickael.andrieu@solvolabs.com>",
+  "license": "MIT",
   "dependencies": {
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
-    "moment": "^2.29.1"
   }
 }
